--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "python.pythonPath": "C:\\Users\\Raul & Vicky\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
+  "python.pythonPath": "C:\\Users\\Raul & Vicky\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
+  "python.linting.pylintArgs": [
+    "--load-plugins=pylint_django"
+],
 }
