--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "python.pythonPath": "C:\\Users\\Raul & Vicky\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
   "python.linting.pylintArgs": [
-    "--load-plugins=pylint_django"
+    "--load-plugins=pylint_django",
+    "--errors-only"
 ],
 }
